# langchain-learning

./: .envrc  .gitignore  1-doc-loader.py  10-agentic-rag.py  11-litellm.py  2-rag.py  3-embeddings.py  4-hybrid-search.py  5-cost-optimization.py  6-semantic-chunking.py  7-advanced_rag.py  8-rag-with-sources.py  9-supabase.py  README.md  chat_model.py  pyproject.toml  rag.py  weather-agent.py
production-api/: .envrc  pyproject.toml
production-api/app/: config.py  models.py
