[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.10",
    "langchain-core>=1.4.7",
    "langchain-huggingface>=1.2.2",
    "langchain[deepseek]>=1.3.9",
    "sentence-transformers>=5.5.1",
]
