[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.10",
    "langchain-core>=1.4.7",
    "langchain-docling>=2.0.0",
    "langchain-google-genai>=4.2.5",
    "langchain-opendataloader-pdf>=2.0.0",
    "langchain[deepseek]>=1.3.9",
    "numpy>=2.4.6",
]
