[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.10",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-docling>=2.0.0",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-opendataloader-pdf>=2.0.0",
    "langchain-text-splitters>=1.1.2",
    "langchain[deepseek]>=1.3.9",
    "langsmith>=0.8.15",
    "numpy>=2.4.6",
    "rank-bm25>=0.2.2",
]
