[project]
name = "production-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langsmith>=0.8.15",
    "pydantic-settings>=2.14.1",
    "slowapi>=0.1.10",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
